app/css/modules/reports.css
.report-container {
  padding: 32px;
}
@media (max-width: 500px) {
    .report-container {
        padding: 15px;
    }
    .col-responsive {
        display: none;
    }
}

/*tables*/
.mdl-data-table {
    border: 0;
}
.mdl-data-table td {
    border-bottom: 0;
}
.report-container table {
    white-space: normal;
    margin: 60px auto;
}
.report-container table caption {
    text-align: left;
    font-size: 1.2em;
    margin-bottom: 5px;
}
.report-container table .nowrap {
    white-space: nowrap;
}

/*highlight record*/
.report-record-highlight {
    margin: 0 auto 60px;
    max-width: 500px;
}
.report-record-highlight h1,
.report-record-highlight h2,
.report-record-highlight h3,
.report-record-highlight h4 {
    margin: 0;
    line-height: normal;
}
.report-record-highlight h1 {
    font-size: 2.2em;
    padding: 10px 0 6px;
    font-weight: bold;
    color: rgb(0,145,234);
}
.report-record-highlight h2 {
    font-size: 1.4em;
    padding-top: 10px;
}
.report-record-highlight h3 {
    font-size: 1.3em;
}
.report-record-highlight h4 {
    font-size: 1em;
    margin-top: 5px;
}
.report-record-highlight i {
    font-size: 9em;
    color: rgb(0,145,234);
}


/* more info */
.report-moreinfo {
    margin-top: 120px;
}
.report-moreinfo ul {
    column-count: 2;
    column-gap: 35px;
}
@media (max-width: 900px) {
    .report-moreinfo ul {
        column-count: 1;
    }
}
.report-moreinfo h5 {
    line-height: normal;
    font-size: 1.2em;
    font-weight: normal;
    margin: 0;
}

